// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The textbook tests correctly finds type errors in test/testcases/test9.tig 1`] = `
"
val it = true : bool
test/testcases/test9.tig:3.1:Then Else disagree
val it = () : unit

"
`;

exports[`The textbook tests correctly finds type errors in test/testcases/test10.tig 1`] = `
"
val it = true : bool
test/testcases/test10.tig:2.1:while loop must be unit
val it = () : unit

"
`;

exports[`The textbook tests correctly finds type errors in test/testcases/test11.tig 1`] = `
"
val it = true : bool
test/testcases/test11.tig:2.1:Not int type
val it = () : unit

"
`;

exports[`The textbook tests correctly finds type errors in test/testcases/test13.tig 1`] = `
"
val it = true : bool
test/testcases/test13.tig:3.3:Bad types for comparison operator
val it = () : unit

"
`;

exports[`The textbook tests correctly finds type errors in test/testcases/test14.tig 1`] = `
"
val it = true : bool
test/testcases/test14.tig:12.9:Bad types for comparison operator
val it = () : unit

"
`;

exports[`The textbook tests correctly finds type errors in test/testcases/test15.tig 1`] = `
"
val it = true : bool
test/testcases/test15.tig:3.1:If returns non-unit
val it = () : unit

"
`;

exports[`The textbook tests correctly finds type errors in test/testcases/test16.tig 1`] = `
"
val it = true : bool

uncaught exception CycleInTypeDec
  raised at: src/typechecker/semant.sml:200.137-200.151
- 
"
`;

exports[`The textbook tests correctly finds type errors in test/testcases/test17.tig 1`] = `
"
val it = true : bool
test/testcases/test17.tig:4.23:Type undefined
val it = () : unit

"
`;

exports[`The textbook tests correctly finds type errors in test/testcases/test18.tig 1`] = `
"
val it = true : bool
test/testcases/test18.tig:5.4:Variable undefined
val it = () : unit

"
`;

exports[`The textbook tests correctly finds type errors in test/testcases/test19.tig 1`] = `
"
val it = true : bool
test/testcases/test19.tig:8.16:Variable does not exist!
test/testcases/test19.tig:8.4:Argument type mismatch
val it = () : unit

"
`;

exports[`The textbook tests correctly finds type errors in test/testcases/test20.tig 1`] = `
"
val it = true : bool
test/testcases/test20.tig:3.18:Variable does not exist!
test/testcases/test20.tig:3.19:Not int type
val it = () : unit

"
`;

exports[`The textbook tests correctly finds type errors in test/testcases/test21.tig 1`] = `
"
val it = true : bool
test/testcases/test21.tig:8.11:Not int type
test/testcases/test21.tig:5.1:function body and return type differ
val it = () : unit

"
`;

exports[`The textbook tests correctly finds type errors in test/testcases/test22.tig 1`] = `
"
val it = true : bool
test/testcases/test22.tig:7.11:Assigning wrong type to variable
val it = () : unit

"
`;

exports[`The textbook tests correctly finds type errors in test/testcases/test23.tig 1`] = `
"
val it = true : bool
test/testcases/test23.tig:7.12:Assigning wrong type to variable
test/testcases/test23.tig:8.10:Assigning wrong type to variable
val it = () : unit

"
`;

exports[`The textbook tests correctly finds type errors in test/testcases/test24.tig 1`] = `
"
val it = true : bool
test/testcases/test24.tig:5.2:subscript var on non-array type
val it = () : unit

"
`;

exports[`The textbook tests correctly finds type errors in test/testcases/test25.tig 1`] = `
"
val it = true : bool
test/testcases/test25.tig:5.2:field var on non-record type
val it = () : unit

"
`;

exports[`The textbook tests correctly finds type errors in test/testcases/test26.tig 1`] = `
"
val it = true : bool
test/testcases/test26.tig:3.3:Not int type
val it = () : unit

"
`;

exports[`The textbook tests correctly finds type errors in test/testcases/test28.tig 1`] = `
"
val it = true : bool
test/testcases/test28.tig:7.21:named type does not match expression
test/testcases/test28.tig:9.2:Variable does not exist!
val it = () : unit

"
`;

exports[`The textbook tests correctly finds type errors in test/testcases/test29.tig 1`] = `
"
val it = true : bool
test/testcases/test29.tig:7.21:named type does not match expression
test/testcases/test29.tig:9.2:Variable does not exist!
val it = () : unit

"
`;

exports[`The textbook tests correctly finds type errors in test/testcases/test31.tig 1`] = `
"
val it = true : bool
test/testcases/test31.tig:3.12:named type does not match expression
test/testcases/test31.tig:5.2:Variable does not exist!
val it = () : unit

"
`;

exports[`The textbook tests correctly finds type errors in test/testcases/test32.tig 1`] = `
"
val it = true : bool
test/testcases/test32.tig:6.11:Initializing array with wrong type
val it = () : unit

"
`;

exports[`The textbook tests correctly finds type errors in test/testcases/test33.tig 1`] = `
"
val it = true : bool
test/testcases/test33.tig:3.10:Type undefined
test/testcases/test33.tig:3.10:Assigning record to not record type
test/testcases/test33.tig:3.7:assigning nil to non-record
val it = () : unit

"
`;

exports[`The textbook tests correctly finds type errors in test/testcases/test34.tig 1`] = `
"
val it = true : bool
test/testcases/test34.tig:5.2:Argument type mismatch
val it = () : unit

"
`;

exports[`The textbook tests correctly finds type errors in test/testcases/test35.tig 1`] = `
"
val it = true : bool
test/testcases/test35.tig:5.2:Argument type mismatch
val it = () : unit

"
`;

exports[`The textbook tests correctly finds type errors in test/testcases/test36.tig 1`] = `
"
val it = true : bool
test/testcases/test36.tig:5.2:Too many arguments
val it = () : unit

"
`;

exports[`The textbook tests correctly finds type errors in test/testcases/test38.tig 1`] = `
"
val it = true : bool
test/testcases/test38.tig:5.2:repeated type name in typedec
val it = () : unit

"
`;

exports[`The textbook tests correctly finds type errors in test/testcases/test39.tig 1`] = `
"
val it = true : bool
test/testcases/test39.tig:6.2:function declared twice in same fundec
val it = () : unit

"
`;

exports[`The textbook tests correctly finds type errors in test/testcases/test40.tig 1`] = `
"
val it = true : bool
test/testcases/test40.tig:3.2:function body and return type differ
val it = () : unit

"
`;

exports[`The textbook tests correctly finds type errors in test/testcases/test43.tig 1`] = `
"
val it = true : bool
test/testcases/test43.tig:6.4:Not int type
val it = () : unit

"
`;

exports[`The textbook tests correctly finds type errors in test/testcases/test45.tig 1`] = `
"
val it = true : bool
test/testcases/test45.tig:5.7:assigning nil to non-record
val it = () : unit

"
`;

exports[`The textbook tests correctly finds type errors in test/testcases/test49.tig 1`] = `
"
val it = true : bool
test/testcases/test49.tig:5.18:syntax error: inserting  PLUS
test/testcases/test49.tig:5.10:Variable does not exist!
test/testcases/test49.tig:5.18:Not int type
test/testcases/test49.tig:5.18:Not int type
val it = () : unit

"
`;

exports[`The textbook tests finds no type errors in test/testcases/merge.tig 1`] = `
"
val it = true : bool
val it = () : unit

"
`;

exports[`The textbook tests finds no type errors in test/testcases/queens.tig 1`] = `
"
val it = true : bool
val it = () : unit

"
`;

exports[`The textbook tests finds no type errors in test/testcases/test1.tig 1`] = `
"
val it = true : bool
val it = () : unit

"
`;

exports[`The textbook tests finds no type errors in test/testcases/test2.tig 1`] = `
"
val it = true : bool
val it = () : unit

"
`;

exports[`The textbook tests finds no type errors in test/testcases/test3.tig 1`] = `
"
val it = true : bool
val it = () : unit

"
`;

exports[`The textbook tests finds no type errors in test/testcases/test4.tig 1`] = `
"
val it = true : bool
val it = () : unit

"
`;

exports[`The textbook tests finds no type errors in test/testcases/test5.tig 1`] = `
"
val it = true : bool
val it = () : unit

"
`;

exports[`The textbook tests finds no type errors in test/testcases/test6.tig 1`] = `
"
val it = true : bool
val it = () : unit

"
`;

exports[`The textbook tests finds no type errors in test/testcases/test7.tig 1`] = `
"
val it = true : bool
val it = () : unit

"
`;

exports[`The textbook tests finds no type errors in test/testcases/test8.tig 1`] = `
"
val it = true : bool
val it = () : unit

"
`;

exports[`The textbook tests finds no type errors in test/testcases/test12.tig 1`] = `
"
val it = true : bool
val it = () : unit

"
`;

exports[`The textbook tests finds no type errors in test/testcases/test27.tig 1`] = `
"
val it = true : bool
val it = () : unit

"
`;

exports[`The textbook tests finds no type errors in test/testcases/test30.tig 1`] = `
"
val it = true : bool
val it = () : unit

"
`;

exports[`The textbook tests finds no type errors in test/testcases/test37.tig 1`] = `
"
val it = true : bool
val it = () : unit

"
`;

exports[`The textbook tests finds no type errors in test/testcases/test41.tig 1`] = `
"
val it = true : bool
val it = () : unit

"
`;

exports[`The textbook tests finds no type errors in test/testcases/test42.tig 1`] = `
"
val it = true : bool
val it = () : unit

"
`;

exports[`The textbook tests finds no type errors in test/testcases/test44.tig 1`] = `
"
val it = true : bool
val it = () : unit

"
`;

exports[`The textbook tests finds no type errors in test/testcases/test46.tig 1`] = `
"
val it = true : bool
val it = () : unit

"
`;

exports[`The textbook tests finds no type errors in test/testcases/test47.tig 1`] = `
"
val it = true : bool
val it = () : unit

"
`;

exports[`The textbook tests finds no type errors in test/testcases/test48.tig 1`] = `
"
val it = true : bool
val it = () : unit

"
`;
